--- a/Home.html
+++ b/Home.html
@@ -7,44 +7,38 @@
     <link rel="Stylesheet" href="styles.css">
 </head>
 <body>
-
-<!--This is the Content Block 1. Must be divided in 2 columns-->
-
-    <div class="container-fluid">
-
+<!--This is the Header, with LOGO and NAME-->
+    <div class="container">
 <!-- NOTE THE FIRST COLUMN WHICH WILL BE SMALL AND WILL HOST THE (1) NAVIGATION BAR AND THE (2) CHESS LOGO  in Rows-->
+         <div class="header">
+            <h1>THE CLUB</h1>
+         </div>
+         <div class="column1">
+    <!-- This is the NAV Bar -->
+             <div class="sidebar">
+                 <ul>
+                     <li><a href="Home.html">HOME</a> </li>
+                     <li><a href="Articles.html">ARTICLES</a></li>
+                     <li><a href="Gallery.html">GALLERY</a> </li>
+                 </ul>
+             </div>
+         </div>
 
-        <div class="column1">
-<!-- NOTE THE CHESS LOGO FIRST AS A ROW -->
-            <div class="logo">
-                <img src="chess.jpeg">
+    <!-- NOTE THE SECOND COLUMN WHICH WIL BE HOST TO : 1. ROW(1)="HEADER" I.E NAME
+                                                        2. ROW(2)=THE GRADIENT BAR WITH THE QUOTE
+                                                        3. ROW(3)= 2 COLUMNS (1 TEXT, IMAGE) -->
+            <div class="column2">
+    <!-- (2) GO FOR THE GRADIENT BAR WITH QUOTE -->
+                <div class="quote">
+                        <h2>MI CASA ES SU CASA</h2>
+                </div>
             </div>
-<!-- NOTE THE NAVIGATION BAR ITSELF -->
-            <div class="sidebar">
-                <ul>
-                    <li><a href="Home.html">HOME</a> </li>
-                    <li><a href="Articles.html">ARTICLES</a></li>
-                    <li><a href="Gallery.html">GALLERY</a> </li>
-                </ul>
-            </div>
-        </div> <!-- THIS IS THE END OF THE SECOND COLUMN -->
+    <!-- AND THEN WE MOVE ON TO THE FOOTER, WHICH WILL CONTAIN THE SOCIAL NETWORK "CONTACT" DIRECTORY -->
 
-<!-- NOTE THE SECOND COLUMN WHICH WIL BE HOST TO : 1. ROW(1)="HEADER" I.E NAME
-                                                    2. ROW(2)=THE GRADIENT BAR WITH THE QUOTE
-                                                    3. ROW(3)= 2 COLUMNS (1 TEXT, IMAGE) -->
-
-        <div class="column2">
-            <div class="header">
-                <h1>THE CLUB</h1>
+            <div class="footer">
+                <h6>FOOTER</h6>
+                <p>This is the footer carrying contacts</p>
             </div>
         </div>
-
-<!-- AND THEN WE MOVE ON TO THE FOOTER, WHICH WILL CONTAIN THE SOCIAL NETWORK "CONTACT" DIRECTORY -->
-
-        <div class="footer">
-            <h6>FOOTER</h6>
-            <p>This is the footer carrying contacts</p>
-        </div>
-    </div>
 </body>
 </html>
