Still carrying on with a sorted kind of DEBUGGING

--- a/Home.html
+++ b/Home.html
@@ -13,8 +13,13 @@
          <div class="header">
             <h1>THE CLUB</h1>
          </div>
-         <div class="column1">
+         <div class="column">
     <!-- This is the NAV Bar -->
+             <div class="empty div">
+                <div class="empty">
+
+                </div>
+             </div>
              <div class="sidebar">
                  <ul>
                      <li><a href="Home.html">HOME</a> </li>
@@ -27,7 +32,7 @@
     <!-- NOTE THE SECOND COLUMN WHICH WIL BE HOST TO : 1. ROW(1)="HEADER" I.E NAME
                                                         2. ROW(2)=THE GRADIENT BAR WITH THE QUOTE
                                                         3. ROW(3)= 2 COLUMNS (1 TEXT, IMAGE) -->
-            <div class="column2">
+            <div class="column">
     <!-- (2) GO FOR THE GRADIENT BAR WITH QUOTE -->
                 <div class="quote">
                         <h2>MI CASA ES SU CASA</h2>
